--- a/manifest.json
+++ b/manifest.json
@@ -1,73 +1,17 @@
 {
-    "name": "Memory Match",
-    "short_name": "MemoryMatch",
-    "description": "Multiplayer Memory Card Game - Firebase ile gerçek zamanlı çoklu oyunculu hafıza kartı oyunu",
-    "start_url": "./index.html",
-    "scope": "./",
+    "name": "Memory Card Game",
+    "short_name": "Memory",
+    "description": "Modern multiplayer memory card game",
+    "start_url": "/",
     "display": "standalone",
-    "orientation": "portrait",
-    "background_color": "#0f0f1a",
+    "background_color": "#1a1a2e",
     "theme_color": "#1a1a2e",
-    "categories": [
-        "games",
-        "entertainment"
-    ],
+    "orientation": "portrait",
     "icons": [
         {
-            "src": "assets/icons/icon-72.png",
-            "sizes": "72x72",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-96.png",
-            "sizes": "96x96",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-128.png",
-            "sizes": "128x128",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-144.png",
-            "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-152.png",
-            "sizes": "152x152",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-384.png",
-            "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "assets/icons/icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
-    ],
-    "screenshots": [
-        {
-            "src": "assets/screenshots/game.png",
-            "sizes": "390x844",
-            "type": "image/png",
-            "form_factor": "narrow"
+            "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎴</text></svg>",
+            "sizes": "any",
+            "type": "image/svg+xml"
         }
     ]
 }
