--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "Memory Card Game",
     "short_name": "Memory",
     "description": "Modern multiplayer memory card game",
-    "start_url": "/",
+    "start_url": "./index.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#1a1a2e",
     "theme_color": "#1a1a2e",
